Login/Register System with bcrypt pwd in db & jwt
